--- a/.github/workflows/arm64-release.yml
+++ b/.github/workflows/arm64-release.yml
@@ -15,6 +15,11 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Remove old caches
+        run: |
+          sudo rm -rf /home/runner/work/_temp/*
+          sudo rm -rf /home/runner/.cache/*
+
       - name: Pull Docker Images and Package
         run: |
           images="${{ github.event.inputs.docker_images }}"
