--- a/.github/workflows/arm64.yml
+++ b/.github/workflows/arm64.yml
@@ -20,6 +20,7 @@ jobs:
       run: |
         sudo rm -rf /home/runner/work/_temp/*
         sudo rm -rf /home/runner/.cache/*
+        sudo rm -rf ./.docker_temp*
 
     - name: Pull Docker Images and Package
       run: |
